
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_attocube3D.la
libmmgr_dal_attocube3D_la_SOURCES = attocube3D.cpp attocube3D.h
libmmgr_dal_attocube3D_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_attocube3D_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = attocube3D.vcproj license.txt

